# pothole-detection-dashboard

./: README.md  class_names.txt  compressed.tif  dashboard.py  main.py  pyproject.toml  requirements.txt
pot/: main.py  pyproject.toml
runs/detect/train6/: args.yaml  results.csv
