[project]
name = "pot-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.0.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "rasterio>=1.4.3",
    "shapely>=2.1.0",
    "streamlit>=1.45.1",
    "ultralytics>=8.3.135",
]
